--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,7 +1,20 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
+  background-color: #303133;
+  color: #efefef;
+}
+
+b {
+  margin-right: 5px;
+  color: #b0b0b0;
+  letter-spacing: 1px;
+  display: inline-block;
+}
+
+.btn {
+  background-color: #bb432c;
+  border-color: #bb432c;
 }
 
 .form-signin {
@@ -12,6 +25,7 @@ body {
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
   margin-bottom: 10px;
+  text-align: center;
 }
 .form-signin .checkbox {
   font-weight: normal;
@@ -37,4 +51,9 @@ body {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+.stat {
+  letter-spacing: 0.5px;
+  margin-right: 15px;
 }
